<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutFooter"
        android:background="@color/white_color"
        android:orientation="horizontal" />

    <RadioGroup
        android:id="@+id/layoutFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_tab_bg"
        android:orientation="horizontal"
        android:weightSum="4">

        <RadioButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/btn_tab_menu_home"
            android:gravity="center"
            android:text="@string/menu_home_text"
            android:textColor="@drawable/btn_tab_menu_home" />

        <RadioButton
            android:id="@+id/btnRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/btn_tab_menu_recent"
            android:gravity="center"
            android:text="@string/menu_recent_text"
            android:textAlignment="gravity"
            android:textColor="@drawable/btn_tab_menu_recent" />

        <RadioButton
            android:id="@+id/btnGroups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/btn_tab_menu_groups"
            android:gravity="center"
            android:text="@string/menu_contact_text"
            android:textColor="@drawable/btn_tab_menu_groups" />

        <RadioButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/btn_tab_menu_settings"
            android:gravity="center"
            android:text="@string/menu_setting_text"
            android:textColor="@drawable/btn_tab_menu_settings" />
    </RadioGroup>
</RelativeLayout>
