<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout6"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="90dp"
        android:gravity="center">

        <TextView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/menu_color"
            android:textSize="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:background="@drawable/btn_border_input_number_phone"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_login_email" />

            <EditText
                android:id="@+id/edt_login_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="13"
                android:hint="@string/login_email"
                android:lines="1"
                android:background="@null"
                android:textColor="@color/brown_dark"
                android:textColorHint="@color/brown_dark"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:background="@drawable/btn_border_input_number_phone"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_login_password" />

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="13"
                android:hint="@string/create_account_register_password"
                android:background="@null"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/brown_dark"
                android:textColorHint="@color/brown_dark"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:background="@drawable/btn_border_input_number_phone"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_login_password" />

            <EditText
                android:id="@+id/edt_login_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="13"
                android:hint="@string/create_account_register_return_password"
                android:background="@null"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/brown_dark"
                android:textColorHint="@color/brown_dark"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_error_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/linearLayout2"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/tv_error_msg_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:ems="13"
                android:focusable="false"
                android:gravity="center"
                android:lines="2"
                android:textColor="@color/red_color"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/btn_border_input_number_phone">

            <Button
                android:id="@+id/btn_signup_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bord"
                android:text="@string/create_account_signup"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
